use new class from DK core to handle memory device information CCBUGS: 438845

--- a/core/libs/threadimageio/CMakeLists.txt
+++ b/core/libs/threadimageio/CMakeLists.txt
@@ -28,6 +28,7 @@ set(libthreadimageio_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/fileio/loadingcacheinterface.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/fileio/loadsavetask.cpp
 
+    ${CMAKE_CURRENT_SOURCE_DIR}/engine/dmemoryinfo.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/engine/dfileoperations.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/engine/filereadwritelock.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/engine/managedloadsavethread.cpp
