add unit test for dmemoryinfo class

--- a/core/tests/miscs/CMakeLists.txt
+++ b/core/tests/miscs/CMakeLists.txt
@@ -57,3 +57,18 @@ target_link_libraries(solidhardware_gui
 
                       ${COMMON_TEST_LINK}
 )
+
+#------------------------------------------------------------------------
+
+ecm_add_tests(${CMAKE_CURRENT_SOURCE_DIR}/dmemoryinfo_utest.cpp
+
+        NAME_PREFIX
+
+        "digikam-"
+
+        LINK_LIBRARIES
+
+        digikamcore
+
+        ${COMMON_TEST_LINK}
+)
