start to separate avplayer main window implementation by feature, for a better readability and maintenance

--- a/core/avplayer/CMakeLists.txt
+++ b/core/avplayer/CMakeLists.txt
@@ -32,6 +32,8 @@ set(avplayer_SRCS ${CMAKE_SOURCE_DIR}/core/avplayer/utils/EventFilter.cpp
                   ${CMAKE_SOURCE_DIR}/core/avplayer/main/main.cpp
                   ${CMAKE_SOURCE_DIR}/core/avplayer/main/MainWindow.cpp
                   ${CMAKE_SOURCE_DIR}/core/avplayer/main/MainWindow_p.cpp
+                  ${CMAKE_SOURCE_DIR}/core/avplayer/main/MainWindow_setup.cpp
+                  ${CMAKE_SOURCE_DIR}/core/avplayer/main/MainWindow_io.cpp
 )
 
 # Set the application icon on the application
