--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,17 +77,19 @@ if(MSVC)
 
 endif()
 
-if(MINGW)
+# Work around command line length issue on Windows
+
+if(CMAKE_GENERATOR MATCHES "Ninja" AND CMAKE_HOST_WIN32)
 
     # see https://stackoverflow.com/questions/43184251/cmake-command-line-too-long-windows
 
-    set(CMAKE_C_USE_RESPONSE_FILE_FOR_OBJECTS    1)
-    set(CMAKE_CXX_USE_RESPONSE_FILE_FOR_OBJECTS  1)
-    set(CMAKE_C_USE_RESPONSE_FILE_FOR_INCLUDES   1)
-    set(CMAKE_CXX_USE_RESPONSE_FILE_FOR_INCLUDES 1)
+    set(CMAKE_C_USE_RESPONSE_FILE_FOR_OBJECTS    TRUE)
+    set(CMAKE_CXX_USE_RESPONSE_FILE_FOR_OBJECTS  TRUE)
+    set(CMAKE_C_USE_RESPONSE_FILE_FOR_INCLUDES   TRUE)
+    set(CMAKE_CXX_USE_RESPONSE_FILE_FOR_INCLUDES TRUE)
     set(CMAKE_C_RESPONSE_FILE_LINK_FLAG          "@")
     set(CMAKE_CXX_RESPONSE_FILE_LINK_FLAG        "@")
-    set(CMAKE_NINJA_FORCE_RESPONSE_FILE          1 CACHE INTERNAL "")
+    set(CMAKE_NINJA_FORCE_RESPONSE_FILE          TRUE CACHE INTERNAL "")
 
     message(STATUS "Use reponse files to compile and link objects...")
 
