--- a/core/dplugins/CMakeLists.txt
+++ b/core/dplugins/CMakeLists.txt
@@ -6,7 +6,9 @@
 
 HEADER_DIRECTORIES(${CMAKE_SOURCE_DIR}/core/utilities DK_LOCAL_INCLUDES_UTILS)
 
-include_directories(${DK_LOCAL_INCLUDES_UTILS})
+include_directories(${DK_LOCAL_INCLUDES}
+                    ${DK_LOCAL_INCLUDES_UTILS}
+)
 
 add_subdirectory(generic)
 add_subdirectory(editor)
