--- a/core/tests/CMakeLists.txt
+++ b/core/tests/CMakeLists.txt
@@ -11,7 +11,9 @@ kde_enable_exceptions()
 
 HEADER_DIRECTORIES(${CMAKE_SOURCE_DIR}/core/utilities DK_LOCAL_INCLUDES_UTILS)
 
-include_directories(${DK_LOCAL_INCLUDES_UTILS})
+include_directories(${DK_LOCAL_INCLUDES}
+                    ${DK_LOCAL_INCLUDES_UTILS}
+)
 
 # -------------------------------------------------------------------------------
 # Unit-tests common dependencies
