--- a/core/libs/CMakeLists.txt
+++ b/core/libs/CMakeLists.txt
@@ -10,18 +10,17 @@ include(RulesDNGSdk)
 
 HEADER_DIRECTORIES(${CMAKE_SOURCE_DIR}/core/utilities DK_LOCAL_INCLUDES_UTILS)
 
-include_directories(
+include_directories(${DK_LOCAL_INCLUDES}
+                    ${DK_LOCAL_INCLUDES_UTILS}
 
-    ${DK_LOCAL_INCLUDES_UTILS}
-
-    ${CMAKE_SOURCE_DIR}/core/app/main
-    ${CMAKE_SOURCE_DIR}/core/app/date
-    ${CMAKE_SOURCE_DIR}/core/app/dragdrop
-    ${CMAKE_SOURCE_DIR}/core/app/views/stack
-    ${CMAKE_SOURCE_DIR}/core/app/views/utils
-    ${CMAKE_SOURCE_DIR}/core/app/items/utils
-    ${CMAKE_SOURCE_DIR}/core/app/items/delegate
-    ${CMAKE_SOURCE_DIR}/core/app/views/sidebar
+                    ${CMAKE_SOURCE_DIR}/core/app/main
+                    ${CMAKE_SOURCE_DIR}/core/app/date
+                    ${CMAKE_SOURCE_DIR}/core/app/dragdrop
+                    ${CMAKE_SOURCE_DIR}/core/app/views/stack
+                    ${CMAKE_SOURCE_DIR}/core/app/views/utils
+                    ${CMAKE_SOURCE_DIR}/core/app/items/utils
+                    ${CMAKE_SOURCE_DIR}/core/app/items/delegate
+                    ${CMAKE_SOURCE_DIR}/core/app/views/sidebar
 )
 
 add_subdirectory(dimg)
