process icons with stub for showfoto and avplayer

--- a/core/avplayer/CMakeLists.txt
+++ b/core/avplayer/CMakeLists.txt
@@ -39,7 +39,6 @@ set(avplayer_SRCS ${CMAKE_SOURCE_DIR}/core/avplayer/utils/EventFilter.cpp
 # Set the application icon on the application
 
 file(GLOB ICONS_SRCS "${CMAKE_SOURCE_DIR}/core/data/icons/apps/*-apps-avplayer.png")
-ecm_add_app_icon(avplayer_SRCS ICONS ${ICONS_SRCS})
 
 if(WIN32)
 
@@ -52,12 +51,14 @@ if(WIN32)
 
 elseif(APPLE)
 
+    ecm_add_app_icon(avplayer_SRCS ICONS ${ICONS_SRCS})
     configure_file(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/templates/AVPlayerInfo.plist.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/Info.plist)
     add_executable(avplayer ${avplayer_SRCS})
     set_target_properties(avplayer PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_BINARY_DIR}/Info.plist)
 
 else()
 
+    ecm_add_app_icon(avplayer_SRCS ICONS ${ICONS_SRCS})
     add_executable(avplayer ${avplayer_SRCS})
 
 endif()
@@ -142,9 +143,12 @@ if(WIN32)
 
     configure_file(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/templates/versioninfo.rc.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/versioninfo.rc)
 
+    set(avplayer_windows_stub_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/main/windows_stub_main.cpp)
+
+    ecm_add_app_icon(avplayer_windows_stub_SRCS ICONS ${ICONS_SRCS})
+
     add_executable(avplayer_windows_stub_exe
-                   ${CMAKE_CURRENT_SOURCE_DIR}/main/windows_stub_main.cpp
-                   ${avplayer_SRCS_ICONS}
+                   ${avplayer_windows_stub_SRCS}
                    ${CMAKE_CURRENT_BINARY_DIR}/versioninfo.rc
     )
 
