Big factoring of KF framework to compile with Qt5 or Qt6. Code simplification

--- a/project/bundles/3rdparty/ext_libksane/CMakeLists.txt
+++ b/project/bundles/3rdparty/ext_libksane/CMakeLists.txt
@@ -10,6 +10,10 @@ set(EXTPREFIX_libksane "${EXTPREFIX}" )
 
 GetKF5ApplicationMd5Sums(libksane ${KA_VERSION})
 
+if (${ENABLE_QTVERSION} MATCHES "6.*")
+    set(QT6CommonOptions -DQT_MAJOR_VERSION=6 -DBUILD_WITH_QT6=ON -DEXCLUDE_DEPRECATED_BEFORE_AND_AT=5.94.0)
+endif()
+
 if(MINGW)
 
     ExternalProject_Add(ext_libksane
@@ -32,6 +36,7 @@ if(MINGW)
                                    -DCMAKE_LIBRARY_PATH=${CMAKE_PREFIX_PATH}/lib
                                    -DZLIB_ROOT=${CMAKE_PREFIX_PATH}
                                    ${GLOBAL_PROFILE}
+                                   ${QT6CommonOptions}
                                    "${argoptions}"
                                    -DWITH_DESIGNER_PLUGIN=OFF
                                    -DBUILD_TESTING=OFF
@@ -51,7 +56,7 @@ elseif(APPLE)
                         PATCH_COMMAND ${PATCH_COMMAND} -p1 -i ${CMAKE_CURRENT_SOURCE_DIR}/libksane-common-rules.patch
 
                         CONFIGURE_COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/../../../../bootstrap.macports <SOURCE_DIR>/. &&
-                                          <SOURCE_DIR>/bootstrap.macports ${EXTPREFIX_libksane} debug x86_64 "-DWITH_DESIGNER_PLUGIN=OFF -DBUILD_TESTING=OFF -Wno-dev"
+                                          <SOURCE_DIR>/bootstrap.macports ${EXTPREFIX_libksane} debug x86_64 "-DWITH_DESIGNER_PLUGIN=OFF -DBUILD_TESTING=OFF -Wno-dev ${QT6CommonOptions} "
 
                         BUILD_COMMAND cd <SOURCE_DIR>/build && $(MAKE)
 
@@ -73,6 +78,7 @@ else() # Linux
                         CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${EXTPREFIX_libksane}
                                    -DCMAKE_BUILD_TYPE=${GLOBAL_BUILD_TYPE}
                                    ${GLOBAL_PROFILE}
+                                   ${QT6CommonOptions}
                                    -DCMAKE_SYSTEM_PREFIX_PATH=${EXTPREFIX}
                                    -DWITH_DESIGNER_PLUGIN=OFF
                                    -DBUILD_TESTING=OFF
