--- a/project/bundles/3rdparty/ext_kf5_frameworks/CMakeLists.txt
+++ b/project/bundles/3rdparty/ext_kf5_frameworks/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Script to build KF5 Frameworks for digiKam bundle.
+# Script to build KF6 Frameworks for digiKam bundle.
 #
 # Copyright (c) 2015-2022 by Gilles Caulier  <caulier dot gilles at gmail dot com>
 #
@@ -31,7 +31,7 @@ function(InstallKF5Component
         )
 
         message(STATUS "--------------------------------")
-        message(STATUS "KF5 component    : ${name}")
+        message(STATUS "KF6 component    : ${name}")
         message(STATUS "Component version: ${version}")
         message(STATUS "Component MD5    : ${md5sm}")
         message(STATUS "Configure options: ${argoptions}")
@@ -87,7 +87,7 @@ function(InstallKF5Component
         )
 
         message(STATUS "--------------------------------")
-        message(STATUS "KF5 component    : ${name}")
+        message(STATUS "KF6 component    : ${name}")
         message(STATUS "Component version: ${version}")
         message(STATUS "Component MD5    : ${md5sm}")
         message(STATUS "Configure options: ${argoptions}")
@@ -137,7 +137,7 @@ function(InstallKF5Component
         )
 
         message(STATUS "--------------------------------")
-        message(STATUS "KF5 component    : ${name}")
+        message(STATUS "KF6 component    : ${name}")
         message(STATUS "Component version: ${version}")
         message(STATUS "Component MD5    : ${md5sm}")
         message(STATUS "Configure options: ${argoptions}")
@@ -183,35 +183,39 @@ else()
     set(BreezeIconsOptions -DBINARY_ICONS_RESOURCE=ON)
 endif()
 
-InstallKF5Component(extra-cmake-modules ${KF5_VERSION} ""                                                                   "")
-InstallKF5Component(kconfig             ${KF5_VERSION} ""                                                                   "")
-InstallKF5Component(breeze-icons        ${KF5_VERSION} "${BreezeIconsOptions}"                                              "breeze-dropsvg-rccprefix.patch")
-InstallKF5Component(solid               ${KF5_VERSION} ""                                                                   "")
-InstallKF5Component(kcoreaddons         ${KF5_VERSION} ""                                                                   "kcoreaddons-mingw.patch")
-InstallKF5Component(threadweaver        ${KF5_VERSION} ""                                                                   "${MacosThreadWeaverPatch}")
-InstallKF5Component(kwindowsystem       ${KF5_VERSION} ""                                                                   "")
-InstallKF5Component(karchive            ${KF5_VERSION} ""                                                                   "")
-InstallKF5Component(kdbusaddons         ${KF5_VERSION} ""                                                                   "")
-InstallKF5Component(ki18n               ${KF5_VERSION} ""                                                                   "")
-InstallKF5Component(kcrash              ${KF5_VERSION} ""                                                                   "")
-InstallKF5Component(kcodecs             ${KF5_VERSION} ""                                                                   "")
-InstallKF5Component(kauth               ${KF5_VERSION} "${MacosKauthBackend}"                                               "")
-InstallKF5Component(kguiaddons          ${KF5_VERSION} "-DWITH_WAYLAND=OFF"                                                 "kguiaddons-mingw.patch")
-InstallKF5Component(kwidgetsaddons      ${KF5_VERSION} ""                                                                   "")
-InstallKF5Component(kitemviews          ${KF5_VERSION} ""                                                                   "")
-InstallKF5Component(kcompletion         ${KF5_VERSION} ""                                                                   "")
-InstallKF5Component(kconfigwidgets      ${KF5_VERSION} ""                                                                   "")
-InstallKF5Component(kiconthemes         ${KF5_VERSION} ""                                                                   "")
-InstallKF5Component(kservice            ${KF5_VERSION} ""                                                                   "")
-InstallKF5Component(kglobalaccel        ${KF5_VERSION} ""                                                                   "")
-InstallKF5Component(kcalendarcore       ${KF5_VERSION} ""                                                                   "${KCalendarCorePatch}")
-InstallKF5Component(kxmlgui             ${KF5_VERSION} ""                                                                   "")
-InstallKF5Component(kbookmarks          ${KF5_VERSION} ""                                                                   "")
-InstallKF5Component(kimageformats       ${KF5_VERSION} ""                                                                   "")
-InstallKF5Component(knotifyconfig       ${KF5_VERSION} ""                                                                   "knotifyconfig-drop-phonon.patch")
-InstallKF5Component(knotifications      ${KF5_VERSION} ""                                                                   "knotifications-drop-phonon.patch")
-InstallKF5Component(kjobwidgets         ${KF5_VERSION} ""                                                                   "")
-InstallKF5Component(sonnet              ${KF5_VERSION} ""                                                                   "")
-InstallKF5Component(ktextwidgets        ${KF5_VERSION} ""                                                                   "")
-InstallKF5Component(kio                 ${KF5_VERSION} ""                                                                   "kio-drop-ktextwidgets.patch")
-InstallKF5Component(kinit               ${KF5_VERSION} ""                                                                   "")
+if (${ENABLE_QTVERSION} MATCHES "6.*")
+    set(Qt6CommonOptions -DQT_MAJOR_VERSION=6 -DBUILD_WITH_QT6=ON -DEXCLUDE_DEPRECATED_BEFORE_AND_AT=5.94.0)
+endif()
+
+InstallKF5Component(extra-cmake-modules ${KF5_VERSION} "${Qt6CommonOptions}"                       "")
+InstallKF5Component(kconfig             ${KF5_VERSION} "${Qt6CommonOptions}"                       "")
+InstallKF5Component(breeze-icons        ${KF5_VERSION} "${Qt6CommonOptions};${BreezeIconsOptions}" "breeze-dropsvg-rccprefix.patch")
+InstallKF5Component(solid               ${KF5_VERSION} "${Qt6CommonOptions}"                       "")
+InstallKF5Component(kcoreaddons         ${KF5_VERSION} "${Qt6CommonOptions}"                       "kcoreaddons-mingw.patch")
+InstallKF5Component(threadweaver        ${KF5_VERSION} "${Qt6CommonOptions}"                       "${MacosThreadWeaverPatch}")
+InstallKF5Component(kwindowsystem       ${KF5_VERSION} "${Qt6CommonOptions}"                       "")
+InstallKF5Component(karchive            ${KF5_VERSION} "${Qt6CommonOptions}"                       "")
+InstallKF5Component(kdbusaddons         ${KF5_VERSION} "${Qt6CommonOptions}"                       "")
+InstallKF5Component(ki18n               ${KF5_VERSION} "${Qt6CommonOptions}"                       "")
+InstallKF5Component(kcrash              ${KF5_VERSION} "${Qt6CommonOptions}"                       "")
+InstallKF5Component(kcodecs             ${KF5_VERSION} "${Qt6CommonOptions}"                       "")
+InstallKF5Component(kauth               ${KF5_VERSION} "${Qt6CommonOptions};${MacosKauthBackend}"  "")
+InstallKF5Component(kguiaddons          ${KF5_VERSION} "${Qt6CommonOptions};-DWITH_WAYLAND=OFF"    "kguiaddons-mingw.patch")
+InstallKF5Component(kwidgetsaddons      ${KF5_VERSION} "${Qt6CommonOptions}"                       "")
+InstallKF5Component(kitemviews          ${KF5_VERSION} "${Qt6CommonOptions}"                       "")
+InstallKF5Component(kcompletion         ${KF5_VERSION} "${Qt6CommonOptions}"                       "")
+InstallKF5Component(kconfigwidgets      ${KF5_VERSION} "${Qt6CommonOptions}"                       "")
+InstallKF5Component(kiconthemes         ${KF5_VERSION} "${Qt6CommonOptions}"                       "")
+InstallKF5Component(kservice            ${KF5_VERSION} "${Qt6CommonOptions}"                       "")
+InstallKF5Component(kglobalaccel        ${KF5_VERSION} "${Qt6CommonOptions}"                       "")
+InstallKF5Component(kcalendarcore       ${KF5_VERSION} "${Qt6CommonOptions}"                       "${KCalendarCorePatch}")
+InstallKF5Component(kxmlgui             ${KF5_VERSION} "${Qt6CommonOptions}"                       "")
+InstallKF5Component(kbookmarks          ${KF5_VERSION} "${Qt6CommonOptions}"                       "")
+InstallKF5Component(kimageformats       ${KF5_VERSION} "${Qt6CommonOptions}"                       "")
+InstallKF5Component(knotifyconfig       ${KF5_VERSION} "${Qt6CommonOptions}"                       "knotifyconfig-drop-phonon.patch")
+InstallKF5Component(knotifications      ${KF5_VERSION} "${Qt6CommonOptions}"                       "knotifications-drop-phonon.patch")
+InstallKF5Component(kjobwidgets         ${KF5_VERSION} "${Qt6CommonOptions}"                       "")
+InstallKF5Component(sonnet              ${KF5_VERSION} "${Qt6CommonOptions}"                       "")
+InstallKF5Component(ktextwidgets        ${KF5_VERSION} "${Qt6CommonOptions}"                       "")
+InstallKF5Component(kio                 ${KF5_VERSION} "${Qt6CommonOptions}"                       "kio-drop-ktextwidgets.patch")
+InstallKF5Component(kinit               ${KF5_VERSION} "${Qt6CommonOptions}"                       "")
