--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -1,25 +1,34 @@
 Dependencies:
-- 'on': ['@all']
+- 'on': ['Linux', 'FreeBSD', 'Windows', 'macOS']
   'require':
-    'frameworks/extra-cmake-modules': '@stable'
-    'frameworks/kxmlgui': '@stable'
-    'frameworks/kcoreaddons': '@stable'
-    'frameworks/kconfig': '@stable'
-    'frameworks/kservice': '@stable'
-    'frameworks/kwindowsystem': '@stable'
-    'frameworks/solid': '@stable'
-    'frameworks/ki18n': '@stable'
-    'frameworks/kio': '@stable'
-    'frameworks/kiconthemes': '@stable'
-    'frameworks/kfilemetadata': '@stable'
-    'frameworks/threadweaver': '@stable'
-    'frameworks/knotifyconfig': '@stable'
-    'frameworks/knotifications': '@stable'
-    'frameworks/kcontacts': '@stable'
-    'frameworks/kcalendarcore': '@stable'
-    'pim/akonadi-contacts': '@stable'
-    'graphics/libksane': '@stable'
+    'frameworks/extra-cmake-modules':   '@stable'
+    'frameworks/kxmlgui':               '@stable'
+    'frameworks/kcoreaddons':           '@stable'
+    'frameworks/kconfig':               '@stable'
+    'frameworks/kservice':              '@stable'
+    'frameworks/kwindowsystem':         '@stable'
+    'frameworks/solid':                 '@stable'
+    'frameworks/ki18n':                 '@stable'
+    'frameworks/kio':                   '@stable'
+    'frameworks/kiconthemes':           '@stable'
+    'frameworks/threadweaver':          '@stable'
+    'frameworks/knotifyconfig':         '@stable'
+    'frameworks/knotifications':        '@stable'
+    'frameworks/kcalendarcore':         '@stable'
+    'frameworks//kimageformats':        '@stable'
+    'applications/marble':              '@stable'
+
+- 'on': ['Linux']
+    'frameworks/kcontacts':             '@stable'
+    'pim/akonadi-contacts':             '@stable'
+    'frameworks/kfilemetadata':         '@stable'
+
+- 'on': ['Linux', 'FreeBSD']
+    'graphics/libksane':                '@stable'
 
 Options:
     run-cppcheck: False
-    use-ccache: True
+    use-ccache:   True
+
+Options:
+    require-passing-tests-on: [ 'Linux' ]
