--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: CC0-1.0
 
 Dependencies:
-- 'on': ['Linux', 'FreeBSD', 'Windows', 'macOS']
+- 'on': ['@all']
   'require':
     'frameworks/extra-cmake-modules':   '@stable'
     'frameworks/kxmlgui':               '@stable'
@@ -19,6 +19,9 @@ Dependencies:
     'frameworks/knotifications':        '@stable'
     'frameworks/kcalendarcore':         '@stable'
     'frameworks//kimageformats':        '@stable'
+
+- 'on': ['Linux', 'FreeBSD', 'Windows', 'macOS']
+  'require':
     'applications/marble':              '@stable'
 
 - 'on': ['Linux']
