--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ include:
   - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/linux.yml
   - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/freebsd.yml
   - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/windows.yml
-  - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/android.yml
+# QtWebEngine is not avaialble under Androis -> port digiKam to QtWebView (https://doc.qt.io/qt-5/qtwebview-index.html)
+#  - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/android.yml
 # Enable Linux Qt6 when Marble dependency will be ported
 #  - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/linux-qt6.yml
