--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,12 @@
-# SPDX-FileCopyrightText: 2020 Volker Krause <vkrause@kde.org>
+# SPDX-FileCopyrightText: 2020-2022 Gilles Cauliere <caulier dot gilles at gmail dot com>
 # SPDX-License-Identifier: CC0-1.0
+#
+# See targets available at https://invent.kde.org/sysadmin/ci-utilities/-/tree/master/gitlab-templates
 
 include:
   - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/linux.yml
   - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/freebsd.yml
   - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/windows.yml
-  - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/macos.yml
 # QtWebEngine is not avaialble under Androis -> port digiKam to QtWebView (https://doc.qt.io/qt-5/qtwebview-index.html)
 #  - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/android.yml
 # Enable Linux Qt6 when Marble dependency will be ported
