only enable Linux Qt6 on gitlab CI, the rest is compiled on KDE build factory

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -22,7 +22,8 @@ Dependencies:
 - 'on': ['Linux', 'FreeBSD', 'Windows', 'macOS']
   'require':
     'frameworks/knotifyconfig':         '@stable'
-    'applications/marble':              '@stable'
+#    Marble do not compile yet with Qt6
+#    'applications/marble':              '@stable'
 
 - 'on': ['Linux']
   'require':
