do not add libksane on Linux-Qt6

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -31,7 +31,7 @@ Dependencies:
     'pim/akonadi-contacts':             '@stable'
     'frameworks/kfilemetadata':         '@stable'
 
-- 'on': ['Linux', 'FreeBSD']
+- 'on': ['FreeBSD']
   'require':
     'graphics/libksane':                '@stable'
 
