--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,8 @@
 # See targets available at https://invent.kde.org/sysadmin/ci-utilities/-/tree/master/gitlab-templates
 
 include:
-  - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/linux-qt6.yml
+# FIXME: opencv is missing on Linux Qt6
+#  - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/linux-qt6.yml
 # FreeBSD is already supported by KDE build factory
 #  - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/freebsd.yml
 # Windows is already supported by KDE build factory
