Test ocr Tesseract cli

--- a/core/tests/CMakeLists.txt
+++ b/core/tests/CMakeLists.txt
@@ -161,6 +161,7 @@ add_subdirectory(metadataengine)
 add_subdirectory(miscs)
 add_subdirectory(multithreading)
 add_subdirectory(rawengine)
+add_subdirectory(text_convert)
 add_subdirectory(timestampupdate)
 add_subdirectory(webservices)
 add_subdirectory(widgets)
