--- a/core/tests/CMakeLists.txt
+++ b/core/tests/CMakeLists.txt
@@ -160,8 +160,8 @@ add_subdirectory(mediawiki)
 add_subdirectory(metadataengine)
 add_subdirectory(miscs)
 add_subdirectory(multithreading)
+add_subdirectory(ocrtextconverter)
 add_subdirectory(rawengine)
-add_subdirectory(text_convert)
 add_subdirectory(timestampupdate)
 add_subdirectory(webservices)
 add_subdirectory(widgets)
