--- a/project/bundles/3rdparty/ext_gmicqt/CMakeLists.txt
+++ b/project/bundles/3rdparty/ext_gmicqt/CMakeLists.txt
@@ -17,6 +17,7 @@ set(PREFIX_ext_gmicqt "${EXTPREFIX}")
 set(GmicQt_Conf -DGMIC_QT_HOST=digikam
                 -DENABLE_ASAN=OFF
                 -DENABLE_FFTW3=${FFTW_SUPPORT}
+                -DENABLE_SYSTEM_GMIC=OFF
                 ${GLOBAL_PROFILE}
 )
 
