--- a/core/dplugins/generic/metadata/metadataedit/CMakeLists.txt
+++ b/core/dplugins/generic/metadata/metadataedit/CMakeLists.txt
@@ -12,6 +12,7 @@ include_directories($<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Widgets,INTERFACE_I
                     $<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Core,INTERFACE_INCLUDE_DIRECTORIES>
 
                     $<TARGET_PROPERTY:KF5::I18n,INTERFACE_INCLUDE_DIRECTORIES>
+                    $<TARGET_PROPERTY:KF5::SonnetUi,INTERFACE_INCLUDE_DIRECTORIES>
                     $<TARGET_PROPERTY:KF5::ConfigCore,INTERFACE_INCLUDE_DIRECTORIES>
 
                     ${CMAKE_CURRENT_SOURCE_DIR}/dialog
@@ -62,4 +63,5 @@ set(metadataeditplugin_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/exif/exifeditwidget.cpp
 
 DIGIKAM_ADD_GENERIC_PLUGIN(NAME    MetadataEdit
                            SOURCES ${metadataeditplugin_SRCS}
+                           DEPENDS KF5::SonnetUi
 )
