Factoring spell-checking in common widget based on QTextEdit and QPlainTextEdit These common widget provide a way to set visible lines to edit contents, in goal to optimize space on GUI. Add more fields in Metadata Editpr with spell-checking. CCBUGS: 402922, 360954, 256471, 92310

--- a/core/libs/widgets/CMakeLists.txt
+++ b/core/libs/widgets/CMakeLists.txt
@@ -10,6 +10,7 @@ APPLY_COMMON_POLICIES()
 set(libtextwidgets_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/text/modelcompleter.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/text/searchtextbar.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/text/dtextedit.cpp
 )
 
 set(liblayouttools_SRCS
