--- a/core/dplugins/generic/tools/ocrtextconverter/CMakeLists.txt
+++ b/core/dplugins/generic/tools/ocrtextconverter/CMakeLists.txt
@@ -18,6 +18,7 @@ include_directories(
                     $<TARGET_PROPERTY:KF5::XmlGui,INTERFACE_INCLUDE_DIRECTORIES>
                     $<TARGET_PROPERTY:KF5::TextWidgets,INTERFACE_INCLUDE_DIRECTORIES>
                     $<TARGET_PROPERTY:KF5::CoreAddons,INTERFACE_INCLUDE_DIRECTORIES>
+                    $<TARGET_PROPERTY:KF5::SonnetUi,INTERFACE_INCLUDE_DIRECTORIES>
 )
 
 
@@ -40,6 +41,7 @@ target_link_libraries(textconverterbackend
                       digikamcore
                       KF5::TextWidgets
                       KF5::CoreAddons
+                      KF5::SonnetUi
 )
 
 
