Spell-Checking with KF5::Sonet is now an optional dependencies with digiKam core. CCBUGS: 402922, 360954, 256471, 92310

--- a/core/app/utils/digikam_config.h.cmake.in
+++ b/core/app/utils/digikam_config.h.cmake.in
@@ -36,6 +36,9 @@
 /* Define to 1 if an external KIO shared library have been found */
 #cmakedefine HAVE_KIO 1
 
+/* Define to 1 if an external Sonnet shared library have been found */
+#cmakedefine HAVE_SONNET 1
+
 /* Define to 1 if an external Ksane shared library have been found */
 #cmakedefine HAVE_KSANE 1
 
