Show Spell-Checking features support in Components Info Dialog

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -199,7 +199,7 @@ MACRO_BOOL_TO_01(KF5Notifications_FOUND       HAVE_KNOTIFICATIONS)
 MACRO_BOOL_TO_01(KF5NotifyConfig_FOUND        HAVE_KNOTIFYCONFIG)
 MACRO_BOOL_TO_01(KF5KIO_FOUND                 HAVE_KIO)
 MACRO_BOOL_TO_01(KF5IconThemes_FOUND          HAVE_KICONTHEMES)
-MACRO_BOOL_TO_01(KF5SonnetUi_FOUND            HAVE_SONNET)
+MACRO_BOOL_TO_01(KF5Sonnet_FOUND              HAVE_SONNET)
 MACRO_BOOL_TO_01(LensFun_FOUND                HAVE_LENSFUN)
 MACRO_BOOL_TO_01(LQR-1_FOUND                  HAVE_LIBLQR_1)
 MACRO_BOOL_TO_01(Gphoto2_FOUND                HAVE_GPHOTO2)
