--- a/core/libs/dialogs/CMakeLists.txt
+++ b/core/libs/dialogs/CMakeLists.txt
@@ -24,9 +24,8 @@ include_directories(
 )
 
 if(KF5Sonnet_FOUND)
-    include_directories($<TARGET_PROPERTY:KF5::SonnetUi,INTERFACE_INCLUDE_DIRECTORIES>)
+    include_directories($<TARGET_PROPERTY:KF5::SonnetCore,INTERFACE_INCLUDE_DIRECTORIES>)
 endif()
-
 
 if(ENABLE_QWEBENGINE)
     include_directories($<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::WebEngineWidgets,INTERFACE_INCLUDE_DIRECTORIES>)
