implementation an internal multi-thread for OCR processing images

--- a/core/dplugins/generic/tools/ocrtextconverter/CMakeLists.txt
+++ b/core/dplugins/generic/tools/ocrtextconverter/CMakeLists.txt
@@ -29,6 +29,8 @@ set(textconverterplugin_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/textconverterlist.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/textconvertersettings.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ocrtesseractengine.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/textconvertertask.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/textconverterthread.cpp
 )
 
 
